--- a/test.yaml
+++ b/test.yaml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  title: HTML INJECTION FOR POC PURPOSE
+  title: HTML INJECTION FOR POC PURPOSE |
      <h1>To get free 500$ reward, please go to our patner website <h1><a href="https://evil.com">Click Here</a></h1></h1>
   description: |
     <h1>To get free 500$ reward, please go to our patner website <h1><a href="https://evil.com">Click Here</a></h1></h1>
